--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-data/
+# Data & datasets
+
 *.pickle
--------------
+
+# Model weights
 *.pth
--------------
-/__pycache__
+
+# Python cache
+__pycache__/
 *.pyc
